--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+  <head>
+      <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width">
+     <title>Home - Brechó Blanc</title>
+     <link rel="stylesheet" href="reset.css">
+      <link rel="stylesheet" href="produtos.css">
+  </head>
 
 <body>
 <h1 class="titulo-rincipal">Brecho Blanc</h1>
 
   <img id="banner" src="brecho.jpg">
 
+  <p>O <strong>brechó Blanc</strong> oferece a você roupas dentro da moda atual de forma consciente e sustentável, trazendo roupas de alta qualidade, estilo exclusivo, conforto e carinho para nossos clientes. Localizado em <em>Afonso Pena, São José dos Pinhais</em>, o brechó Blanc já é destaque na região e conquista novos amantes de brecho a cada dia.</p>
+
+  
   
   
   <script src="script.js"></script>
