--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <div class="product">
                 <img src="moletom.jpg" alt="Produto 1">
                 <h2>Moletons</h2>
+                <p>Diversas cores,tamanhos e estampas.</p>
                 <p>R$30,00</p>
                 <button>Comprar</button>
             </div>
@@ -119,6 +120,7 @@
             <div class="product">
                 <img src="camiseta.jpg" alt="Produto 2">
                 <h2>Camisetas</h2>
+                <p>Diversas cores, tamanhos e estampas.</p>
                 <p>R$15,00</p>
                 <button>Comprar</button>
             </div>
@@ -126,6 +128,7 @@
             <div class="product">
                 <img src="calça.jpg" alt="Produto 3">
                 <h2>Calças</h2>
+                <p>Diversas cores, tamanhos e estampas.</p>
                 <p>R$15,00</p>
                 <button>Comprar</button>
             </div>
@@ -133,6 +136,7 @@
             <div class="product">
                 <img src="tenis.jpg" alt="Produto 4">
                 <h2>Tênis</h2>
+                <p>Diversas cores, tamanhos e estampas.</p>
                 <p>R$20,00</p>
                 <button>Comprar</button>
             </div>
@@ -140,6 +144,7 @@
             <div class="product">
                 <img src="pijamas.jpg" alt="Produto 5">
                 <h2>Pijamas</h2>
+                <p>Diversas cores, tamanhos e estampas.</p>
                 <p>R$20,00</p>
                 <button>Comprar</button>
             </div>
@@ -147,6 +152,7 @@
             <div class="product">
                 <img src="intimas.jpg" alt="Produto 6">
                 <h2>Roupas Intimas</h2>
+                <p>Diversas cores, tamanhos e estampas.</p>
                 <p>R$10,00</p>
                 <button>Comprar</button>
             </div>
