--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="produtos.css">
+  <title> Contatos </title>
 
   <style>
       body {
