--- a/informacao.html
+++ b/informacao.html
@@ -105,7 +105,7 @@
      </header>
 
  <div class="container">
-           <h1>Informações da Empresa</h1>
+           <h1>Informações</h1>
            <div class="empresa-info">
                <p>O <strong>brechó Blanc</strong> oferece a você roupas dentro da moda atual de forma consciente e sustentável, trazendo roupas de alta qualidade, estilo exclusivo, conforto e carinho para nossos clientes. Nosso brechó já é destaque na região e conquista novos amantes de brechó a cada dia, venha fazer parte você também.</p>
                <p><strong>Endereço:</strong> Rua Expedicionário Bonifácio Gonçalves de Araujo - Parque da Fonte, São José dos Pinhais - PR</p>
