--- a/contato.html
+++ b/contato.html
@@ -1,110 +1,110 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-widt">
+    <link rel="stylesheet"  href="produtos.css">
+    <title> Contatos </title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="produtos.css">
-  <title> Contatos </title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
 
-  <style>
-      body {
-          font-family: Arial, sans-serif;
-          margin: 0;
-          padding: 0;
-          background-color: #f0f0f0;
-      }
+        header {
+            background-color: #9400D3;
+            color: #fff;
+            padding: 10px 20px;
+            text-align: center;
+        }
 
-      header {
-          background-color: #9400D3;
-          color: #fff;
-          padding: 10px 20px;
-          text-align: center;
-      }
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
 
-      .container {
-          max-width: 1200px;
-          margin: 20px auto;
-          padding: 0 20px;
-      }
+        .content {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
 
-      .content {
-          display: flex;
-          justify-content: space-between;
-          flex-wrap: wrap;
-      }
+        .product {
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 5px;
+            padding: 20px;
+            margin: 10px;
+            width: calc(33.33% - 20px);
+            text-align: center;
+        }
 
-      .product {
-          background-color: #fff;
-          box-shadow: 0 0 10px rgba(0,0,0,0.1);
-          border-radius: 5px;
-          padding: 20px;
-          margin: 10px;
-          width: calc(33.33% - 20px);
-          text-align: center;
-      }
+        .product img {
+            max-width: 100%;
+            border-radius: 5px;
+        }
 
-      .product img {
-          max-width: 100%;
-          border-radius: 5px;
-      }
+        footer {
+            background-color: #4B0082;
+            color: #fff;
+            text-align: center;
+            padding: 40px 0;
+            margin-top: 20px;
+        }
 
-      footer {
-          background-color: #4B0082;
-          color: #fff;
-          text-align: center;
-          padding: 40px 0;
-          margin-top: 20px;
-      }
+        .caixa{
+        max-width: 800px;
+        margin: 20px auto;
+        overflow: hidden
+        float: left
+        }
 
-      .caixa{
-      max-width: 800px;
-      margin: 20px auto;
-      overflow: hidden
-      float: left
-      }
+        nav{
+        overflow: hidden;
+        position: absolute;
+        top: 110px;
+        right: 0;
+        }
 
-      nav{
-      overflow: hidden;
-      position: absolute;
-      top: 110px;
-      right: 0;
-      }
+        nav li{
+        display: inline;
+        margin-left: 15px;
+            }
 
-      nav li{
-      display: inline;
-      margin-left: 15px;
-          }
+        nav a{
+        color: #F8F8FF;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 22px;
+        text-transform: uppercase;
+        }  
 
-      nav a{
-      color: #F8F8FF;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 22px;
-      text-transform: uppercase;
-      }  
+        nav a:hover{
+        color: Indigo;
+        text-decoration: underline;
+        }
 
-      nav a:hover{
-      color: Indigo;
-      text-decoration: underline;
-      }
+    </style>
 
-  </style>
-</head>
+  </head>
 
-<body>
-  <header>
-    <div class="caixa"><h1> <img src="logodois.png"> </h1>
+  <body>
+    <header>
+        <div class="caixa"><h1> <img src="logodois.png"> </h1>
 
       <nav>
-        <ul>
-          <li> <a href="index.html"> Produtos </a> </li>
-          <li> <a href="produtos.html"> Contatos </a> </li>
-          <li> <a href="informacao.html"> Informações </a> </li>
-        </ul>
+         <ul>
+        <li> <a href="index.html"> Produtos </a></li>
+        <li> <a href="contato.html"> Contatos </a></li>
+        <li> <a href="informacao.html"> Informações </a></li>
+         </ul>
+        </div>
       </nav>
-    </div>
-  </header>
+     </header>
 
   <main>
 <form>
