--- a/informacao.html
+++ b/informacao.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-widt">
@@ -156,3 +158,4 @@
         <p class="logo"> &#169; Copyrithg Brechó Blanc - 2024</p>
       </footer>
 </body>
+</html>
