--- a/contato.html
+++ b/contato.html
@@ -129,7 +129,7 @@
 
   <label for="radio-telefone"> <input type="radio" name="contato" value="contato" id="radio-telefone"> Telefone</label>
 
-   <label for="radio-whatsapp"> <input type="radio" name="whatsapp" value="contato" id="radio-whatsapp" checked> Whatsapp</label>
+   <label for="radio-whatsapp"> <input type="radio" name="contato" value="contato" id="radio-whatsapp" checked> Whatsapp</label>
   </fieldset>
 
   <legend> Qual horário você prefere ser atendido? </legend>
